Project desbagunce {
  database_type: 'PostgreSQL'
}

Table houses {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null]
  image_path varchar
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null]
  email varchar [not null, unique]
  firebase_uid varchar [not null, unique]
  is_admin boolean [not null, default: false]
  house_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
}

Table items {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null]
  notes text
  current_quantity int [not null, default: 0]
  purchase_quantity int [not null, default: 0]
  weeks_until_depleted int
  photo_path varchar
  house_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
}

Table tags {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar [not null]
  notes text
  house_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
}

Table item_tags {
  id uuid [pk, default: `gen_random_uuid()`]
  item_id uuid [not null]
  tag_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz

  indexes {
    (item_id, tag_id) [unique]
  }
}

Table invites {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar [not null]
  code varchar [not null, unique]
  status invite_status [not null, default: 'pending']
  expires_at timestamptz [not null]
  accepted_at timestamptz
  house_id uuid [not null]
  invited_by_id uuid [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  deleted_at timestamptz
}

Enum invite_status {
  pending
  accepted
  expired
  canceled
}

Ref: users.house_id > houses.id [delete: cascade]
Ref: items.house_id > houses.id [delete: cascade]
Ref: tags.house_id > houses.id [delete: cascade]
Ref: invites.house_id > houses.id [delete: cascade]
Ref: invites.invited_by_id > users.id [delete: cascade]
Ref: item_tags.item_id > items.id [delete: cascade]
Ref: item_tags.tag_id > tags.id [delete: cascade]
